mas funciones (PENDIENTE DE CAMBIO)